// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List expect to render a list of items 1`] = `
<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item"
      key="Apple"
    >
      <span>
        Apple
      </span>
    </li>
    <li
      className="item"
      key="Samsung"
    >
      <span>
        Samsung
      </span>
    </li>
    <li
      className="item"
      key="Microsoft"
    >
      <span>
        Microsoft
      </span>
    </li>
  </ul>
</div>
`;

exports[`List expect to render a list of nested items 1`] = `
<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item item--parent"
      key="Apple"
    >
      <span>
        Apple
      </span>
      <ul
        className="list list--child"
      >
        <li
          className="item"
          key="iPhone"
        >
          <span>
            iPhone
          </span>
        </li>
        <li
          className="item"
          key="iPad"
        >
          <span>
            iPad
          </span>
        </li>
      </ul>
    </li>
    <li
      className="item item--parent"
      key="Samsung"
    >
      <span>
        Samsung
      </span>
      <ul
        className="list list--child"
      >
        <li
          className="item"
          key="S8"
        >
          <span>
            S8
          </span>
        </li>
        <li
          className="item"
          key="Note 5"
        >
          <span>
            Note 5
          </span>
        </li>
      </ul>
    </li>
    <li
      className="item item--parent"
      key="Microsoft"
    >
      <span>
        Microsoft
      </span>
      <ul
        className="list list--child"
      >
        <li
          className="item"
          key="Surface"
        >
          <span>
            Surface
          </span>
        </li>
        <li
          className="item"
          key="Surface Pro"
        >
          <span>
            Surface Pro
          </span>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`List expect to render a list of nested items with empty children 1`] = `
<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item item--parent"
      key="Apple"
    >
      <span>
        Apple
      </span>
      <ul
        className="list list--child"
      >
        <li
          className="item"
          key="iPhone"
        >
          <span>
            iPhone
          </span>
        </li>
        <li
          className="item"
          key="iPad"
        >
          <span>
            iPad
          </span>
        </li>
      </ul>
    </li>
    <li
      className="item item--parent"
      key="Samsung"
    >
      <span>
        Samsung
      </span>
      <ul
        className="list list--child"
      >
        <li
          className="item"
          key="S8"
        >
          <span>
            S8
          </span>
        </li>
        <li
          className="item"
          key="Note 5"
        >
          <span>
            Note 5
          </span>
        </li>
      </ul>
    </li>
    <li
      className="item"
      key="Microsoft"
    >
      <span>
        Microsoft
      </span>
    </li>
  </ul>
</div>
`;
